tests/parsing/fail/empty_pragma.circom
pragma;

template T() {
}

component main = T();
